--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <div class="filtros">
       <div class="select-nacionalidad">
         <label for="nacionalidad">Nacionalidad</label>
-        <select name="nacionalidad" id="nacionalidad" class="selectNacionalidad">
+        <select
+          name="nacionalidad"
+          id="nacionalidad"
+          class="selectNacionalidad"
+        >
           <option value="todos">Todos</option>
           <option value="chile">Chile</option>
           <option value="argentina">Argentina</option>
@@ -19,8 +23,8 @@
         </select>
       </div>
       <div class="select-genero">
-        <label for="genero">Genero</label>
-        <select name="genero" id="genero" class="estadoCivil">
+        <label for="estado-civil">Estado Civil</label>
+        <select name="estado-civil" id="estado-civil" class="estadoCivil">
           <option value="todos">Todos</option>
           <option value="soltero">Soltero</option>
           <option value="casado">Casado</option>
@@ -29,10 +33,10 @@
         </select>
       </div>
       <div>
-        <input type="checkbox" />
+        <input type="checkbox" class="esMayorEdad"/>
         <label for="mayor-edad">Es mayor de edad</label>
       </div>
-      <div><input type="text" placeholder="Buscar" /></div>
+      <div><input type="text" placeholder="Buscar" class="buscar"/></div>
     </div>
     <div class="tabla">
       <table class="table">
@@ -45,7 +49,6 @@
           <th>Activo</th>
         </tr>
         <tbody class="table-body"></tbody>
-       
       </table>
     </div>
 
